--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class ="col-12 col-sm align-self-center">
+                <div class ="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid" alt="logo-restaurant">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a href="#Reservation-Form"><button class="btn btn-sm btn-block btn-warning"  type="button">Reserve Table</button> </a>
                 </div>
             </div>
         </div>
@@ -71,11 +74,12 @@
             </div>
             <div class ="col col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                    
                     <div class="media-body">                    
-                        <h2 class="mt-0">Weekend Grand Buffet</h2>
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                         <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
                 </div>   
             </div>
         </div>
@@ -93,6 +97,45 @@
                         <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                     </div>
                 </div>                
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row row-content ">
+            <div class="col-8 offset-2 col-sm">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form id="Reservation-Form">
+                            <div class="form-group row Required">
+                                <label for="Number-Of-Guest" class="col-md-2 col-form-label">Number Of Guests</label>
+                                <div class="col-md-10">
+                                    <label class="radio-inline"><input type="radio" name="optradio" > 1 </label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"checked> 2 </label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 3 </label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 4 </label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 5 </label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 6 </label>
+                                </div>
+                            </div>
+                        </form>
+                        <div class="form-group row Required">
+                            <label for="Date and Time" class="col-md-2 col-form-label">Date and Time</label>   
+                            <div class= "col-5 col-md-5">
+                                <input type="date" class="form-group" id="date" name="date" placeholder="Date>
+                            </div>
+                            <div class= "col-7 col-md-5">
+                                <input type="time" class="form-group" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>    
+
             </div>
         </div>
     </div>
