--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
                     <img src="img/logo.png" class="img-fluid" alt="logo-restaurant">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" href="#Reservation-Form"><button class="btn btn-sm nav-link btn-block btn-warning" style="color: white;"
-                        data-toggle="tooltip" data-html="true" title="Or Call us at <br> <strong>+852 12345678</strong>" data-placement="bottom"><strong>Reserve Table</strong> </button> </a>
+                    <span class="navbar-text">
+                        <a role="button" href="#Reservation-Form"><button class="btn btn-sm nav-link btn-block btn-warning" style="color: white;"
+                        data-toggle="modal" data-target="#Reservation-Form"><strong>Reserve Table</strong> </button> </a>   
+                    </span>
                 </div>
             </div>
         </div>
@@ -132,6 +134,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -184,39 +194,61 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container>
         <div class="row row-content ">
             <div class="col-8 offset-2 col-sm">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form id="Reservation-Form">
-                            <div class="form-group row Required">
-                                <label for="Number-Of-Guest" class="col-md-2 col-form-label">Number Of Guests</label>
-                                <div class="col-md-10">
-                                    <label class="radio-inline"><input type="radio" name="optradio" > 1 </label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"checked> 2 </label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 3 </label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 4 </label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 5 </label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 6 </label>
-                                </div>
+
+                <div class="modal fade" role="dialog" id="Reservation-Form">
+
+                    <div class="modal-dialog modal-lg" role="content">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Reserve a Table </h4>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
-                        </form>
-                        <div class="form-group row Required">
-                            <label for="Date and Time" class="col-md-2 col-form-label">Date and Time</label>   
-                            <div class= "col-5 col-md-5">
-                                <input type="date" class="form-group" id="date" name="date" placeholder="Date>
-                            </div>
-                            <div class= "col-7 col-md-5">
-                                <input type="time" class="form-group" id="time" name="time" placeholder="Time">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="offset-md-2 col-md-10">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="form-group row Required">
+                                            <label for="Number-Of-Guest" class="col-md-2 col-form-label">Number Of Guests</label>
+                                            <div class="col-md-10">
+                                                <label class="radio-inline"><input type="radio" name="optradio" > 1 </label>
+                                                <label class="radio-inline"><input type="radio" name="optradio"> 2 </label>
+                                                <label class="radio-inline"><input type="radio" name="optradio" checked> 3 </label>
+                                                <label class="radio-inline"><input type="radio" name="optradio"> 4 </label>
+                                                <label class="radio-inline"><input type="radio" name="optradio"> 5 </label>
+                                                <label class="radio-inline"><input type="radio" name="optradio"> 6 </label>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row Required">
+                                            <label for="Section" class="col-md-2 col-form-label">Section</label>
+                                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                    <label class="btn btn-secondary btn-success active">
+                                                    <input type="radio" name="Non-Smoking" id="Non-Smoking" autocomplete="off" checked> Non-Smoking
+                                                    </label>
+                                                    <label class="btn btn-secondary btn-danger">
+                                                    <input type="radio" name="Smoking" id="Smoking" autocomplete="off"> Smoking
+                                                    </label>
+                                              </div>
+                                        </div>
+                                    
+                                        <div class="form-group row Required">
+                                            <label for="Date and Time" class="col-md-2 col-form-label">Date and Time</label>   
+                                            <div class= "col-auto col-md-auto">
+                                                <input type="text" class="form-group" id="date" name="date" placeholder="Date" >
+                                            </div>
+                                            <div class= "col-auto col-md-auto">
+                                                <input type="text" class="form-group" id="time" name="time" placeholder="Time">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="offset-md-2 col-md-10">
+                                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                                <button role="button" type="submit" class="btn btn-primary btn-sm ml-auto">Reserve</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>                       
+                        </div> 
                     </div>
                 </div>    
 
@@ -271,10 +303,15 @@
      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
      <script>
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
+            $("#mycarousel").carousel( { interval: 2000 } );
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
         });
     </script>
-
 </body>
 
 </html>
